modified:   _config.yml         modified:   _layouts/default.html         modified:   _sass/index.scss         modified:   assets/css/style.scss

--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,8 @@ collections:
 # Outputting
 permalink           : :title
 future              : true
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: default
