some changes for testing

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,4 +1,4 @@
-title               : Malcolm Function
+title               : Malcom Sample
 street              : Musterstraße
 number_of_building  : 123
 postal_code         : 12345
